--- a/css/base.css
+++ b/css/base.css
@@ -24,3 +24,13 @@ body {
 .section4 {
   background-image: url("../images/section4.jpg");
 }
+
+.linkToNav3 a {
+  color: #ffffff;
+  font-size: 1.5rem;
+  position: relative;
+  top: 25rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
